--- a/Documentation/html/classWavFileIO.html
+++ b/Documentation/html/classWavFileIO.html
@@ -285,7 +285,14 @@ Public Member Functions</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Makes sure the file is valid. </p>
-<p >Returns true if the file exists and has a ".wav" extension at the end </p>
+<p >Returns true if the file exists and has a ".wav" extension at the end </p><dl class="params"><dt>Parameters</dt><dd>
+  <table class="params">
+    <tr><td class="paramname">string inputFilePath</td><td>Contains the location of the file to validate </td></tr>
+  </table>
+  </dd>
+</dl>
+<dl class="section return"><dt>Returns</dt><dd>Returns the state of the file. <br  />
+ </dd></dl>
 
 </div>
 </div>
