--- a/Documentation/html/classEcho.html
+++ b/Documentation/html/classEcho.html
@@ -106,7 +106,7 @@ Inheritance diagram for Echo:</div>
  <div class="center">
   <img src="classEcho.png" usemap="#Echo_map" alt=""/>
   <map id="Echo_map" name="Echo_map">
-<area href="classProcess.html" alt="Process" shape="rect" coords="0,56,58,80"/>
+<area href="classProcess.html" title="Processor for wave file data." alt="Process" shape="rect" coords="0,56,58,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
