--- a/Documentation/html/classCompression.html
+++ b/Documentation/html/classCompression.html
@@ -109,7 +109,7 @@ Inheritance diagram for Compression:</div>
  <div class="center">
   <img src="classCompression.png" usemap="#Compression_map" alt=""/>
   <map id="Compression_map" name="Compression_map">
-<area href="classProcess.html" alt="Process" shape="rect" coords="0,56,85,80"/>
+<area href="classProcess.html" title="Processor for wave file data." alt="Process" shape="rect" coords="0,56,85,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
@@ -124,7 +124,7 @@ Public Member Functions</h2></td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p >The compression class compresses a sound file. </p>
-<p >The class takes a vector with the data from a sound file and compresses it. It does this by only adding certain, evenly spaced data points and putting them into a new vector. By essentially removing a lot of data points, the sound file becomes smaller and so, compressed. </p>
+<p >The class takes a vector with the data from a sound file and compresses it. It does this by taking certain, evenly spaced data points and putting them into a new vector. By essentially removing a lot of data points, the sound file becomes smaller and so, compressed. </p>
 </div><h2 class="groupheader">Member Function Documentation</h2>
 <a id="ad9824fb235a64f6d8edb72a0bf9cbcd4" name="ad9824fb235a64f6d8edb72a0bf9cbcd4"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#ad9824fb235a64f6d8edb72a0bf9cbcd4">&#9670;&nbsp;</a></span>compressData()</h2>
