--- a/Documentation/html/AudioProcessor_8h_source.html
+++ b/Documentation/html/AudioProcessor_8h_source.html
@@ -116,7 +116,7 @@ $(document).ready(function(){initNavTree('AudioProcessor_8h_source.html',''); in
 <div class="ttc" id="aLowPassFilter_8h_html"><div class="ttname"><a href="LowPassFilter_8h.html">LowPassFilter.h</a></div></div>
 <div class="ttc" id="aNormalization_8h_html"><div class="ttname"><a href="Normalization_8h.html">Normalization.h</a></div></div>
 <div class="ttc" id="aclassCompression_html"><div class="ttname"><a href="classCompression.html">Compression</a></div><div class="ttdoc">The compression class compresses a sound file.</div><div class="ttdef"><b>Definition:</b> Compression.h:14</div></div>
-<div class="ttc" id="aclassEcho_html"><div class="ttname"><a href="classEcho.html">Echo</a></div><div class="ttdef"><b>Definition:</b> Echo.h:6</div></div>
+<div class="ttc" id="aclassEcho_html"><div class="ttname"><a href="classEcho.html">Echo</a></div><div class="ttdoc">Class for Echo.</div><div class="ttdef"><b>Definition:</b> Echo.h:11</div></div>
 <div class="ttc" id="aclassGainAdjustment_html"><div class="ttname"><a href="classGainAdjustment.html">GainAdjustment</a></div><div class="ttdoc">Class to adjust data values by a constant.</div><div class="ttdef"><b>Definition:</b> GainAdjustment.h:13</div></div>
 <div class="ttc" id="aclassLowPassFilter_html"><div class="ttname"><a href="classLowPassFilter.html">LowPassFilter</a></div><div class="ttdoc">Class that contains a low pass filter.</div><div class="ttdef"><b>Definition:</b> LowPassFilter.h:12</div></div>
 <div class="ttc" id="aclassNormalization_html"><div class="ttname"><a href="classNormalization.html">Normalization</a></div><div class="ttdoc">The Normalization class normalizes a sound file.</div><div class="ttdef"><b>Definition:</b> Normalization.h:14</div></div>
