--- a/Documentation/html/index.html
+++ b/Documentation/html/index.html
@@ -122,7 +122,8 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
  Created the UML diagram.<br  />
  </p>
 <p ><b><u>UML Diagram</u></b> </p>
-<p ><b><u>Issues (any missing functionality? - remove note before submitting)</u></b> </p>
+<p ><img src="https://user-images.githubusercontent.com/89618653/145159534-9f8fd25f-bc8d-4995-845d-1bb515aa1fc6.png" alt="unknown" class="inline"/> </p><pre class="fragment">&lt;/p&gt; 
+</pre><p> <b><u>Issues (any missing functionality? - remove note before submitting)</u></b> </p>
 <p ><b><u>Challenges</u></b> </p>
 <p >One challenge was figuring out how to get the header data into the vector format we needed for our classes.<br  />
 &gt; Another challenge was not overwriting group members files on git hub. The solution for this was to communicate which<br  />
